# aoc

./: README.md
2021/1/: 1.py  2.py
2021/10/: 1+2.py
2021/11/: 1+2.py
2021/12/: 1+2.py
2021/13/: 1+2.py
2021/14/: 1+2.py
2021/2/: 1.py  2.py
2021/3/: 1.py  2.py
2021/4/: 1+2.py
2021/5/: 1+2.py
2021/6/: 1+2.py
2021/7/: 1.py  2.py
2021/8/: 1+2.py
2021/9/: 1+2.py
2023/: Cargo.toml  README.md
2023/src/: iter.rs  main.rs
2023/src/day01/: 1.py  2.py  part1.rs  part2.rs
2023/src/day02/: 1.py  2.py  part1.rs  part2.rs
2023/src/day03/: part1.rs  part2.rs
2023/src/day04/: part1.rs  part2.rs
2023/src/day05/: part1.rs  part2.rs
2023/src/day05/input/: test.py
2023/src/day06/: part1.rs  part2.rs
2023/src/day07/: part1.rs  part2.rs
2023/src/day08/: part1.rs  part2.rs
2023/src/day09/: part1.rs  part2.rs
2023/src/day10/: part1.rs  part2.rs
2023/src/day11/: part1.rs  part2.rs
